# warp-speed-ahead

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  gpuArch_README.md
01-foundations/: CMakeLists.txt  saxpy.cu  vector_add.cu
02-thread-hierarchy/: CMakeLists.txt  grid_stride.cu  indexing_1d.cu  indexing_2d.cu  warp_info.cu
03-memory-model/: CMakeLists.txt  constant_filter.cu  shared_histogram.cu  stencil_1d.cu
04-memory-optimization/: CMakeLists.txt  coalescing_bench.cu  matrix_transpose.cu  occupancy_tuning.cu
05-matmul/: CMakeLists.txt  gemm_cublas.cu  gemm_naive.cu  gemm_tiled.cu  gemm_vectorized.cu
06-reductions/: CMakeLists.txt  prefix_scan.cu  reduce_naive.cu  reduce_optimized.cu  reduce_warp.cu
07-warp-programming/: CMakeLists.txt  coop_groups.cu  shuffle_reduce.cu  warp_vote.cu
08-streams-concurrency/: CMakeLists.txt  async_pipeline.cu  event_timing.cu  streams_basic.cu
09-profiling/: CMakeLists.txt  nvtx_annotated.cu  roofline_bench.cu
10-advanced/: CMakeLists.txt  cuda_graphs.cu  flash_attention.cu  multi_gpu.cu  persistent_kernel.cu  tensor_cores.cu
common/: cuda_utils.h
setup/: CMakeLists.txt  device_query.cu
